--- a/procurement/pom.xml
+++ b/procurement/pom.xml
@@ -10,7 +10,7 @@
   <dependencies>
     <dependency>
       <groupId>com.bsd.oms</groupId>
-      <artifactId>oms-domain</artifactId>
+      <artifactId>oms-domai</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
